<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/package_image_view"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/package_image_view"/>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:gravity="center_vertical"
        android:text="@string/name_text_view"
        android:textSize="18sp"
        android:layout_toRightOf="@+id/package_image_view"
        android:layout_toEndOf="@+id/package_image_view"
        android:layout_marginTop="10sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/code_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/code_text_view"
        android:textSize="12sp"
        android:layout_toRightOf="@+id/package_image_view"
        android:layout_toEndOf="@+id/package_image_view"
        android:layout_below="@+id/name_text_view"/>


</RelativeLayout>